WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234791
InlineTextItems should never split inside surrogate pairs
https://bugs.webkit.org/show_bug.cgi?id=234791
Summary
InlineTextItems should never split inside surrogate pairs
alan
Reported
2022-01-01 21:08:23 PST
ssia
Attachments
Patch
(2.84 KB, patch)
2022-01-01 21:48 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-01-01 21:48:49 PST
Created
attachment 448167
[details]
Patch
EWS
Comment 2
2022-01-02 07:09:06 PST
Committed
r287515
(
245650@main
): <
https://commits.webkit.org/245650@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448167
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-01-02 07:10:23 PST
<
rdar://problem/87048419
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug