InlineTextItems should never split inside surrogate pairs https://bugs.webkit.org/show_bug.cgi?id=234791

Reviewed by Antti Koivisto.

This check was added (r285016) to handle the case if the start position in TextUtil::breakWord is
inside a surrogate pair. However we should never have surrogate pairs split across InlineTextItems.
This incorrect state was caused by the bogus "let's keep the first character on the current line" logic
-which could also lead to a visually broken rendering.
(Note that fast/text/word-break-letter-spacing-utf16-surrogates.html passes without the early return)

* layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::breakWord):
(WebCore::Layout::TextUtil::firstUserPerceivedCharacterLength):



Canonical link: https://commits.webkit.org/245650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287515 268f45cc-cd09-0410-ab3c-d52691b4dbfc